[package]
name = "serial-num"
version = "0.5.1"
authors = ["Tim Wiechers <mail@timwie.dev>"]
repository = "https://github.com/timwie/serial-num"
documentation = "https://docs.rs/serial-num/"
categories = ["network-programming", "no-std"]
description = "Serial number type with wraparound"
keywords = ["serial", "number", "rfc-1982", "ack", "udp"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.66"
exclude = [".github/", "Justfile"]

[dependencies.arbitrary]
version = "^1.1.0"
features = ["derive"]
optional = true

[dependencies.bincode]
version = "^2.0.0-rc.3"
default-features = false
features = ["derive"]
optional = true

[dependencies.bitcode]
version = "^0.4"
optional = true

[dependencies.borsh]
version = "^0.9"
default-features = false
optional = true

[dependencies.rkyv]
version = "^0.7"
default-features = false
optional = true

[dependencies.serde]
version = "^1.0.184"
default-features = false
features = ["derive"]
optional = true

[dependencies.speedy]
version = "^0.8"
optional = true

[features]
default = []
arbitrary = ["dep:arbitrary"]
bincode = ["dep:bincode"]
bitcode = ["dep:bitcode"]
borsh = ["dep:borsh"]
rkyv = ["rkyv/size_32"]
rkyv-safe = ["rkyv/size_32", "rkyv/validation"]
serde = ["dep:serde"]
speedy = ["dep:speedy"]

[dev-dependencies]
proptest = "~1.2"
proptest-arbitrary-interop = "~0.1"

[dev-dependencies.rkyv]
version = "^0.7"
default-features = false
features = ["alloc"]
