[package]
name = "serial-num"
version = "0.10.0"
authors = ["Tim Wiechers <mail@timwie.dev>"]
repository = "https://github.com/timwie/serial-num"
documentation = "https://docs.rs/serial-num/"
categories = ["network-programming", "no-std"]
description = "Serial number type with wraparound"
keywords = ["serial", "number", "rfc-1982", "ack", "udp"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.81"
include = [
    "src/*.md",
    "src/lib.rs",
    "RELEASES.md",
    "LICENSE-*",
]

[dependencies.arbitrary]
version = "^1"
features = ["derive"]
optional = true

[dependencies.bincode]
version = "^2.0.0-rc.3"
default-features = false
features = ["derive"]
optional = true

[dependencies.bitcode]
version = ">=0.6,<1"
default-features = false
features = ["derive"]
optional = true

[dependencies.borsh]
version = "^1"
default-features = false
features = ["derive"]
optional = true

[dependencies.bytemuck]
version = "^1.13"
features = ["derive"]
optional = true

[dependencies.postcard]
version = "^1.1"
default-features = false
features = ["experimental-derive"]
optional = true

[dependencies.postcard-schema]
version = "0.2.0"
features = ["derive"]
optional = true

[dependencies.rkyv]
version = ">=0.8,<1"
default-features = false
optional = true

[dependencies.serde]
version = "^1.0.184"
default-features = false
features = ["derive"]
optional = true

[dependencies.speedy]
version = ">=0.8,<1"
optional = true

[features]
default = []
arbitrary = ["dep:arbitrary"]
bincode = ["dep:bincode"]
bitcode = ["dep:bitcode"]
borsh = ["dep:borsh"]
bytemuck = ["dep:bytemuck"]
postcard = ["dep:postcard", "dep:postcard-schema"]
rkyv = ["rkyv/pointer_width_32"]
rkyv-safe = ["rkyv/pointer_width_32", "rkyv/bytecheck"]
serde = ["dep:serde"]
speedy = ["dep:speedy"]

[dev-dependencies]
postcard = { version = "^1", default-features = true }
proptest = "~1.6"
proptest-arbitrary-interop = "~0.1"
serde_json = "1.0"

[dev-dependencies.rkyv]
version = ">=0.8,<1"
default-features = false
features = ["alloc", "pointer_width_32"]

[lints.rust]
elided_lifetimes_in_paths = "deny"
legacy_derive_helpers = "deny"
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(kani)'] }
unknown_lints = "deny"
unreachable_pub = "deny"
unsafe-code = "deny"
unused_crate_dependencies = "warn"
unused_imports = "deny"
unused_mut = "deny"
unused_variables = "deny"

[lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_rust_codeblocks = "deny"
missing_crate_level_docs = "deny"
private_intra_doc_links = "deny"

[lints.clippy]
all = {level = "deny", priority = -1 }  # correctness, suspicious, style, complexity, perf
cargo = {level = "deny", priority = -1 }
restriction = {level = "deny", priority = -1 }
pedantic = {level = "deny", priority = -1 }

absolute_paths = "allow"
arbitrary_source_item_ordering = "allow"
blanket_clippy_restriction_lints = "allow"
decimal_literal_representation = "allow"
implicit_return = "allow"
integer_division_remainder_used = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
missing_trait_methods = "allow"
question_mark_used = "allow"

arithmetic_side_effects = "warn"
as_conversions = "warn"
cast_possible_wrap = "warn"
integer_division = "warn"
